--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,11 @@
-html,body{width:100%;height:100%;position:relative;overflow:hidden;background:#333;}
-#masthead,.displaying-map #masthead{position:static;width:100%;height:120px;background:#111;}
-.home .map-container,.map-container{position:absolute;top:120px;bottom:20px;left:0;right:30%;}.home .map-container .map,.map-container .map{width:100%;height:100%;}
-.displaying-map #content{position:absolute;top:120px;bottom:20px;right:0;left:70%;padding:20px;}
-#content{position:static;overflow:auto;}#content .section-title{background:transparent;padding:0;}#content .section-title h2{color:#f0f0f0;font-size:16px;margin:0;}
-#content::-webkit-scrollbar{width:15px;-webkit-border-radius:5px;-khtml-border-radius:5px;-moz-border-radius:5px;-o-border-radius:5px;border-radius:5px;}
-#content::-webkit-scrollbar-thumb{background:#000;-webkit-border-radius:15px;-khtml-border-radius:15px;-moz-border-radius:15px;-o-border-radius:15px;border-radius:15px;border:5px #333 solid;}
-#colophon{position:fixed;bottom:0;height:20px;width:100%;background:#000;}
+html,body{width:100%;height:100%;position:relative;background:#333;font-size:12px;line-height:18px;}
+.loading-map>*{display:none;}
+.displaying-map{overflow:hidden;}
+#masthead,.displaying-map #masthead{position:fixed;top:0;left:0;right:0;width:100%;height:120px;background:#111;z-index:100;}#masthead h1,.displaying-map #masthead h1{margin:35px 0;line-height:0px;text-indent:-9999px;}#masthead h1 img,.displaying-map #masthead h1 img{display:block;}
+.home .map-container,.map-container{position:absolute;top:120px;bottom:40px;left:0;right:30%;}.home .map-container .map,.map-container .map{width:100%;height:100%;}
+.displaying-map #content{color:#f0f0f0;position:absolute;top:120px;bottom:40px;right:0;padding:40px;width:30%;overflow:auto;background:transparent;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;margin:0;-webkit-box-shadow:0 0 15px rgba(0, 0, 0, 0.9);-khtml-box-shadow:0 0 15px rgba(0, 0, 0, 0.9);-moz-box-shadow:0 0 15px rgba(0, 0, 0, 0.9);-o-box-shadow:0 0 15px rgba(0, 0, 0, 0.9);box-shadow:0 0 15px rgba(0, 0, 0, 0.9);}.displaying-map #content .section-title{background:transparent;padding:0;-webkit-box-shadow:0 0 0;-khtml-box-shadow:0 0 0;-moz-box-shadow:0 0 0;-o-box-shadow:0 0 0;box-shadow:0 0 0;}.displaying-map #content .section-title h2{color:#f0f0f0;font-size:16px;line-height:20px;margin:0;padding-bottom:5px;border-bottom:1px dotted #555;}
+.displaying-map #content .single-post-header{background:transparent;position:fixed;top:120px;right:30%;margin-top:0;margin-right:0;padding:30px;z-index:200;-webkit-box-shadow:-5px 5px 5px rgba(0, 0, 0, 0.6);-khtml-box-shadow:-5px 5px 5px rgba(0, 0, 0, 0.6);-moz-box-shadow:-5px 5px 5px rgba(0, 0, 0, 0.6);-o-box-shadow:-5px 5px 5px rgba(0, 0, 0, 0.6);box-shadow:-5px 5px 5px rgba(0, 0, 0, 0.6);background:#333;}.displaying-map #content .single-post-header h1{color:#f0f0f0;font-size:32px;line-height:32px;margin:0;padding:0;font-weight:200;text-transform:uppercase;}
+#content{background:#f0f0f0;position:static;overflow:visible;margin-top:120px;}#content::-webkit-scrollbar{width:15px;-webkit-border-radius:5px;-khtml-border-radius:5px;-moz-border-radius:5px;-o-border-radius:5px;border-radius:5px;}
+#content::-webkit-scrollbar-thumb{background:#111;-webkit-border-radius:15px;-khtml-border-radius:15px;-moz-border-radius:15px;-o-border-radius:15px;border-radius:15px;border:5px #333 solid;}
+#content:hover::-webkit-scrollbar-thumb{background:#000;}
+#colophon{position:fixed;bottom:0;height:40px;width:100%;background:#666;}
