--- a/css/main.less
+++ b/css/main.less
@@ -30,9 +30,9 @@
 	transform: @arguments;
 }
 .box-sizing(@arguments) {
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
+	-webkit-box-sizing: @arguments;
+	-moz-box-sizing: @arguments;
+	box-sizing: @arguments;
 }
 .font-smoothing(@arguments) {
 	-webkit-font-smoothing: @arguments;
@@ -43,19 +43,40 @@ body {
 	width: 100%;
 	height: 100%;
 	position: relative;
-	overflow: hidden;
 	background: #333;
+	font-size: 12px;
+	line-height: 18px;
+}
+
+.loading-map > * {
+	display: none;
+}
+
+.displaying-map {
+	overflow: hidden;
 }
 
 @top: 120px;
-@bottom: 20px;
+@bottom: 40px;
 
 #masthead,
 .displaying-map #masthead {
-	position: static;
+	h1 {
+		margin: 35px 0;
+		line-height: 0px;
+		text-indent: -9999px;
+		img {
+			display: block;
+		}
+	}
+	position: fixed;
+	top:0;
+	left: 0;
+	right: 0;
 	width: 100%;
 	height: @top;
 	background: #111;
+	z-index: 100;
 }
 
 .home .map-container,
@@ -72,35 +93,72 @@ body {
 }
 
 .displaying-map #content {
+	color: #f0f0f0;
 	position: absolute;
 	top: @top;
 	bottom: @bottom;
 	right: 0;
-	left: 70%;
-	padding: 20px;
-	overflow: display;
-}
-
-#content {
-	position: static;
+	padding: 40px;
+	width: 30%;
 	overflow: auto;
+	background: transparent;
+	.box-sizing(border-box);
+	margin: 0;
+	.box-shadow(0 0 15px rgba(0,0,0,0.9));
 	.section-title {
 		background: transparent;
 		padding: 0;
+		.box-shadow(0 0 0);
 		h2 {
 			color: #f0f0f0;
 			font-size: 16px;
+			line-height: 20px;
 			margin: 0;
+			padding-bottom: 5px;
+			border-bottom: 1px dotted #555;
 		}
 	}
+	.single-post-header {
+		background: transparent;
+		position: fixed;
+		top: @top;
+		right: 30%;
+		margin-top: 0;
+		margin-right: 0;
+		padding: 30px;
+		z-index: 200;
+		.box-shadow(-5px 5px 5px rgba(0,0,0,0.6));
+		background: #333;
+		h1 {
+			color: #f0f0f0;
+			font-size: 32px;
+			line-height: 32px;
+			margin: 0;
+			padding: 0;
+			font-weight: 200;
+			text-transform: uppercase;
+		}
+	}
+}
+
+#content {
+	background: #f0f0f0;
+	position: static;
+	overflow: visible;
+	margin-top: @top;
 	&::-webkit-scrollbar {
 		width: 15px;
 		.border-radius(5px);
 	}
 	&::-webkit-scrollbar-thumb {
-		background: #000;
+		background: #111;
 		.border-radius(15px);
 		border: 5px #333 solid;
+	}
+	&:hover {
+		&::-webkit-scrollbar-thumb {
+			background: #000;
+		}
 	}
 }
 
@@ -109,5 +167,5 @@ body {
 	bottom: 0;
 	height: @bottom;
 	width: 100%;
-	background: #000;
+	background: #666;
 }
