--- a/css/main.less
+++ b/css/main.less
@@ -118,6 +118,14 @@
   content: '\E007';
 }
 
+b {
+	font-weight: bold;
+}
+
+i {
+	font-style: italic;
+}
+
 html,
 body {
 	width: 100%;
@@ -185,14 +193,33 @@ button {
 	height: @top;
 	background: #1f1f1f;
 	z-index: 900;
+	.transition(all .2s ease-in-out);
+	&.scrolled {
+		height: @top/1.7;
+		.site-meta {
+			margin: 18px 0;
+			h1 {
+				height: 40px;
+			}
+		}
+		#masthead-nav {
+			margin-top: 15px;
+		}
+	}
 	.site-meta {
 		margin: 35px 0;
+		.transition(margin .2s ease-in-out);
 		h1 {
 			margin: 0;
 			line-height: 0px;
 			text-indent: -9999px;
+			height: 50px;
+			.transition(all .2s ease-in-out);
 			img {
 				display: block;
+				height: 100%;
+				width: auto;
+				.transition(all .2s ease-in-out);
 			}
 		}
 	}
@@ -202,6 +229,7 @@ button {
 		background: transparent;
 		margin-top: 40px;
 		position: static;
+		.transition(margin-top .2s ease-in-out);
 		nav {
 			ul {
 				> li {
@@ -501,7 +529,7 @@ button {
 	top: @top;
 	bottom: @bottom;
 	left: 0;
-	right: 30%;
+	right: 35%;
 	.map {
 		width: 100%;
 		height: 100%;
@@ -516,7 +544,7 @@ button {
 	bottom: @bottom;
 	right: 0;
 	padding: 40px;
-	width: 30%;
+	width: 35%;
 	min-width: 350px;
 	overflow: auto;
 	.box-sizing(border-box);
@@ -537,15 +565,10 @@ button {
 	}
 	.single-post-header {
 		background: transparent;
-		position: fixed;
-		top: @top;
-		right: 30%;
-		margin-top: 0;
-		margin-right: 0;
-		padding: 30px;
+		padding: 0 0 10px 0;
+		margin: 0 0 30px 0;
 		z-index: 200;
-		.box-shadow(-5px 5px 5px rgba(0,0,0,0.4));
-		background: #333;
+		border-bottom: 1px solid #222;
 		h1 {
 			color: #f0f0f0;
 			font-size: 32px;
@@ -554,6 +577,25 @@ button {
 			padding: 0;
 			font-weight: 200;
 			text-transform: uppercase;
+			.jeditable-container {
+				textarea,
+				input {
+					max-width: 300px;
+					margin-bottom: 20px;
+					display: block;
+					font-size: 32px;
+					line-height: 32px;
+					font-weight: 200;
+					padding: 0;
+					border: 0;
+					background: transparent;
+					color: inherit;
+					font-family: "Open Sans", sans-serif;
+					overflow: hidden;
+					outline: none;
+					.box-shadow(0 0 0);
+				}
+			}
 		}
 	}
 }
@@ -672,6 +714,24 @@ button {
 						a {
 							text-decoration: none;
 						}
+						.jeditable-container {
+							textarea,
+							input {
+								margin-bottom: 20px;
+								display: block;
+								font-size: 22px;
+								line-height: 28px;
+								font-weight: 800;
+								padding: 0;
+								border: 0;
+								background: transparent;
+								color: inherit;
+								font-family: "Open Sans", sans-serif;
+								overflow: hidden;
+								outline: none;
+								.box-shadow(0 0 0);
+							}
+						}
 					}
 					p {
 						font-weight: 200;
@@ -757,10 +817,10 @@ button {
 		bottom: 0;
 	}
 	.lightbox_content {
-		margin: 5% auto;
+		margin: 4% auto;
 		width: 60%;
-		height: 60%;
-		padding: 5%;
+		max-height: 75%;
+		padding: 2.5%;
 		overflow: auto;
 		background: #f0f0f0;
 		color: #333;
@@ -780,14 +840,16 @@ button {
 			font-weight: 200;
 			margin-bottom: 30px;
 			color: #999;
+			font-size: 22px;
+			line-height: 22px;
 			span {
 				font-weight: 800;
 			}
 		}
 		h3 {
 			font-weight: 800;
-			font-size: 18px;
-			line-height: 18px;
+			font-size: 14px;
+			line-height: 14px;
 			color: #333;
 			text-transform: uppercase;
 		}
@@ -798,7 +860,8 @@ button {
  * Add artwork to art guide page
  */
 
-#add_artwork {
+#add_artwork,
+#add_guide {
 	.error-message {
 		padding: 10px;
 		background: lighten(red, 40%);
@@ -818,9 +881,6 @@ button {
 			width: 100%;
 			padding: 10px;
 			font-family: "Open Sans";
-		}
-		textarea {
-			height: 300px;
 		}
 	}
 	.form-actions {
@@ -849,18 +909,18 @@ button {
 		}
 	}
 	#add_to_existing_guide {
-		padding-bottom: 20px;
-		margin-bottom: 40px;
+		margin-bottom: 20px;
 		border-bottom: 1px dotted #aaa;
 	}
-	#add_to_new_guide {
+	#add_to_new_guide,
+	#new_guide {
 		.form-inputs {
 			width: 100%;
 			margin: 0;
 			.title {
-				font-size: 32px;
-				padding: 15px;
-				line-height: 32px;
+				font-size: 28px;
+				padding: 12px;
+				line-height: 28px;
 				font-weight: 200;
 				font-family: "Open Sans";
 			}
@@ -871,5 +931,92 @@ button {
 		.form-actions {
 			margin: 0;
 		}
+	}
+}
+
+
+/*
+ * jeditable
+ */
+
+.jeditable-container {
+	position: relative;
+	display: block;
+	button {
+		.lsf;
+		position: absolute;
+		font-size: 16px !important;
+		line-height: 16px !important;
+		bottom: -35px;
+		padding: 5px;
+		left: 0;
+		&[type=cancel] {
+			left: 25px;
+		}
+		&[type=submit] {
+			.gradient(green, darken(green, 5%), green);
+		}
+	}
+	.tip {
+		position: absolute;
+		top: -12px;
+		left: 0px;
+		font-size: 9px;
+		line-height: 9px;
+		font-weight: 600;
+		color: #999;
+		text-transform: uppercase;
+		display: none;
+	}
+	&:hover {
+		.tip {
+			display: block;
+		}
+	}
+}
+
+body.wysiwyg {
+	.box-sizing(border-box);
+	padding: 0 10px 10px 10px;
+	&::-webkit-scrollbar {
+		width: 15px;
+		.border-radius(5px);
+	}
+	&::-webkit-scrollbar-thumb {
+		background: #333;
+		.border-radius(15px);
+		border: 5px #f0f0f0 solid;
+	}
+}
+
+body.wysiwyg p {
+	font-family: "Open Sans", sans-serif;
+	font-size: 12px;
+}
+
+
+/*
+ * Responsive
+ */
+
+@media only screen and (min-height: 0) and (max-height: 650px) {
+	#masthead,
+	.displaying-map #masthead {
+		height: @top/1.2;
+		.site-meta {
+			margin: 28px 0;
+		}
+		#masthead-nav {
+			margin: 33px 0;
+		}
+	}
+	#content,
+	.displaying-map #content {
+		top: @top/1.2;
+		padding-top: @top/1.2;
+	}
+	.home .map-container,
+	.map-container {
+		top: @top/1.2;
 	}
 }
