--- a/css/main.less
+++ b/css/main.less
@@ -1010,10 +1010,12 @@ body.wysiwyg p {
 			margin: 33px 0;
 		}
 	}
-	#content,
+	#content {
+		padding-top: @top/1.2;
+	}
 	.displaying-map #content {
 		top: @top/1.2;
-		padding-top: @top/1.2;
+		padding-top: 40px;
 	}
 	.home .map-container,
 	.map-container {
