--- a/css/main.less
+++ b/css/main.less
@@ -373,18 +373,11 @@ button {
 				position: relative;
 				cursor: default;
 				z-index: 2;
-				&:after {
-					display: block;
-					float: right;
-					content: '';
-					margin: 6px 5px 0 15px;
-					width: 10px;
-					height: 8px;
-					background: transparent;
-      				background-image: url('../img/arrow.png');
-					background-position: 0 0;
+				.arrow {
+					font-size: 100%;
+					margin-left: 10px;
 				}
-				.lsf {
+				.lsf.icon {
 					margin-right: 10px;
 				}
 			}
@@ -396,7 +389,6 @@ button {
 				width: 220px;
 				background: #f0f0f0;
 				.gradient(#f0f0f0, #ddd, #f0f0f0);
-				//border: 1px solid #f0f0f0;
 				.box-shadow(0 0 15px rgba(0,0,0,0.6));
 				.login-content {
 					margin: 10px;
@@ -808,7 +800,7 @@ button {
 	left: 0;
 	right: 0;
 	bottom: 0;
-	background: rgba(0,0,0,0.9);
+	background: rgba(0,0,0,0.7);
 	.close-area {
 		position: fixed;
 		top: 0;
@@ -827,6 +819,7 @@ button {
 		color: #333;
 		position: relative;
 		z-index: 2;
+		.box-shadow(0 0 50px rgba(0,0,0,1));
 		&::-webkit-scrollbar {
 			width: 15px;
 			.border-radius(5px);
@@ -1021,6 +1014,16 @@ body.wysiwyg p {
 	.home .map-container,
 	.map-container {
 		top: @top/1.2;
+	}
+}
+
+@media only screen and (min-width: 768px) and (max-width: 959px) {
+	#masthead {
+		.user-meta {
+			.user-name {
+				display:none;
+			}
+		}
 	}
 }
 
